Fixed spacing between <p /> elements in post pages

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,13 +9,6 @@ dl, dd, ol, ul, figure {
 }
 
 
-/**
- * hr elements
- */
-hr {
-    margin: 5
-}
-
 
 /**
  * Basic styling
