--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -160,6 +160,10 @@ li {
 	color: #000;	
 }
 
+.post-content p {
+    margin-bottom: 15px;
+}
+
 #line {
 	opacity: 0.1;
 	color: #000;
